set level-seed 6200893858411928858

--- a/server.properties
+++ b/server.properties
@@ -43,7 +43,7 @@ rcon.password=
 generate-structures=true
 max-build-height=256
 online-mode=true
-level-seed=
+level-seed=6200893858411928858
 use-native-transport=true
 prevent-proxy-connections=false
 enable-jmx-monitoring=false
